<resources>
    <string name="app_name">Imitate QQ</string>
    <string name="input_account">输入账号</string>
    <string name="input_password">密码</string>
    <string name="login">登 录</string>
    <string name="text_qq">QQ</string>
    <string name="login_message">阅读并同意</string>
    <string name="login_terms_of_service">服务条款</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_register">注册账号</string>

    <string name="register_nickname">昵称</string>
    <string name="register_inputFirstPsd">密码</string>
    <string name="register_inputAgainPsd">确认密码</string>

    <string name="forget_password">忘记密码</string>
    <string name="findpsd_phone">手机号找回</string>

    <string name="nav_message">消息</string>
    <string name="nav_contact">联系人</string>
    <string name="nav_person">个人资料</string>
    <string name="register_signature">个性签名</string>
    <string name="profile_name">用户名：</string>
    <string name="profile_qq">QQ：</string>
    <string name="profile_signature">个性签名：</string>
</resources>