<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_btn_login"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="新用户注册"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/register_qq" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="用户名："
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#ffffff"
                android:hint="@string/register_nickname"
                android:maxLength="15"
                android:paddingLeft="6dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:singleLine="true"
                android:textSize="18sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="密码："
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#ffffff"
                android:hint="@string/register_inputFirstPsd"
                android:inputType="textPassword"
                android:maxLength="15"
                android:paddingLeft="6dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:singleLine="true"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="确认密码："
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_pwd_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#ffffff"
                android:hint="@string/register_inputAgainPsd"
                android:inputType="textPassword"
                android:maxLength="15"
                android:paddingLeft="6dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:singleLine="true"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="性别："
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg_sex"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2.6"
                android:paddingLeft="5dp">

                <RadioButton
                    android:id="@+id/registerRdBtnMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="男生" />

                <RadioButton
                    android:id="@+id/registerRdBtnFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="120dp"
                    android:layout_marginTop="-33dp"
                    android:text="女生" />
            </RadioGroup>
        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="50dp"-->
<!--            android:gravity="center_vertical"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:layout_width="80dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="right"-->
<!--                android:text="年龄："-->
<!--                android:textSize="16sp"-->
<!--                android:textStyle="bold" />-->

<!--            <EditText-->
<!--                android:id="@+id/et_age"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginLeft="10dp"-->
<!--                android:layout_marginRight="10dp"-->
<!--                android:background="#ffffff"-->
<!--                android:hint="年龄"-->
<!--                android:maxLength="15"-->
<!--                android:paddingLeft="6dp"-->
<!--                android:paddingTop="2dp"-->
<!--                android:paddingBottom="2dp"-->
<!--                android:singleLine="true"-->
<!--                android:textSize="18sp" />-->
<!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="个性签名："
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_signature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#ffffff"
                android:hint="个性签名（选填）"
                android:maxLength="15"
                android:paddingLeft="6dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:singleLine="true"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_btn_login"
            android:text="注册"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

</LinearLayout>