<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.MeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="个人资料"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/profile_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:padding="15dp"
                android:src="@drawable/avatar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="30dp"
                android:paddingTop="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/profile_name"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Harold"
                        android:textColor="@color/white"
                        android:textSize="16dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/profile_qq"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_qq"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2417525822"
                        android:textColor="@color/white"
                        android:textSize="16dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/shape_profile_info"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_baseline_person_outline_24" />

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="性        别："
                    android:textColor="@color/textColorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="男"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/profile_diliver_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_baseline_edit_24" />

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/profile_signature"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_signature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hello Wrold！"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_middle_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/shape_profile_info"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/switch_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp">

                <ImageView
                    android:id="@+id/ic_switch_account"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:src="@mipmap/ic_us_profile" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/ic_switch_account"
                    android:layout_toRightOf="@id/ic_switch_account"
                    android:text="切换账户"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="14sp"
                    tools:ignore="HardcodedText" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/profile_diliver_line" />

            <RelativeLayout
                android:id="@+id/close_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp">

                <ImageView
                    android:id="@+id/ic_closeapp"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:src="@mipmap/ic_profile_feedback" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/ic_closeapp"
                    android:layout_toRightOf="@id/ic_closeapp"
                    android:text="关闭软件"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="14sp"
                    tools:ignore="HardcodedText" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/profile_diliver_line" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/shape_profile_info"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">

            <ImageView
                android:id="@+id/ic_my_logout"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:src="@mipmap/ic_logout_profile" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/ic_my_logout"
                android:layout_toRightOf="@id/ic_my_logout"
                android:text="退出当前账号"
                android:textColor="@color/textColorPrimary"
                android:textSize="14sp"
                tools:ignore="HardcodedText" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/profile_diliver_line" />

    </LinearLayout>

</LinearLayout>